further updates to use new filenames

--- a/02_AbsoluteDeterminationOfSourceActivity.ipynb
+++ b/02_AbsoluteDeterminationOfSourceActivity.ipynb
@@ -830,7 +830,7 @@
     "```\n",
     "\n",
     "during step 5 of the Experiment Computing Set Up, we are telling your Unix environment how to find the relevant simulation code. \n",
-    "This is a Geant4 particle transport Monte Carlo simulation called SodiumIodideMC which has been designed\n",
+    "This is a Geant4 particle transport Monte Carlo simulation called GammaLabMC which has been designed\n",
     "specifically for this laboratory. The simulated set up is shown in Figure 3.\n",
     "<div style=\"text-align: center\">\n",
     "    <img src=\"./images/markdown/Notebook_Sim_imgs.png\" alt=\"Typical pulse profile\" width=\"1000\">\n",
@@ -839,8 +839,8 @@
     "</div>\n",
     "\n",
     "<span style=\"color:red\">Advanced:</span> *For students interested in the Geant4 software details, the C++ class definition files can be found\n",
-    "on Moodle in the Computing section, in a folder called “SodiumMC Source Code.” Have a look at the folders\n",
-    "and files inside. The class implementation files are in SodiumIodideMC/src/ subdirectory. Have a look through\n",
+    "on Moodle in the Computing section, in a folder called “GammaLabMC Source Code.” Have a look at the folders\n",
+    "and files inside. The class implementation files are in GammaLabMC/src/ subdirectory. Have a look through\n",
     "these classes if you are curious how the C++ code for a Geant4 simulation is run and ask if you have any\n",
     "questions or if you would like someone to explain it to you.*\n",
     "\n",
@@ -869,13 +869,13 @@
     "Once you have set the set your desired simulation parameters, you can run the simulation by running the following commands in the terminal:\n",
     "```\n",
     "cd ~/PHYS5036-lab\n",
-    "runSodiumIodide.py\n",
+    "runGammaLabMC.py\n",
     "```\n",
     "\n",
     "Alternatively, if you make more than one config and its not named config.json, you can specify which config to use by running:\n",
     "```\n",
     "cd ~/PHYS5036-lab\n",
-    "runSodiumIodide.py <configFileName>.json\n",
+    "runGammaLabMC.py <configFileName>.json\n",
     "```\n",
     "\n",
     "This will run the simulation and generate two output files (with file format `G4_<detectorType>_<sourceName>.spe/pdf`): \n",
