updated filenames in lab script

--- a/02_AbsoluteDeterminationOfSourceActivity.ipynb
+++ b/02_AbsoluteDeterminationOfSourceActivity.ipynb
@@ -429,7 +429,7 @@
     "df_source = read_spe_files(data_file, background_file) \n",
     "\n",
     "# show a few lines of the dataframe to check it looks OK and view the column names \n",
-    "df_source[40:50]\n"
+    "df_source[40:50]"
    ]
   },
   {
